0.5.5
* The wallet now supports Type-2 deterministic keys (use "-t2" switch)
* Make the node's beeping setup configurable though gocoin.conf

0.5.3
* XSS protection on WebUI and IP access control
* Some new network security features
* Like Satoshi client, do not process incoming messages having more than 1MB in send buffer
* Some changes around qdb database (improved syncs for unspent db, added counters)

0.5.2
* WebUI improvements

0.5.1
* Yet more improved "qdb" is now a part of the repo

0.5.0
* Requires new "qdb" ... much imporved statrup times.
* Never keeps unwind records in memory (only on disk)
* Allows to not keep old unspent outputs in mem. Modify "UTXOCacheBlks" in the config to switch it on.

0.4.8
* Added new blocks' timing stats to the WebUI
* New tool "importblocks" for importing blocks from Satoshi's DB

0.4.7
* Improvements in tx memory pool

0.4.6
* Big rework in the network module

0.4.4
* Allow sorting of transaction tables in WebUI

0.4.3
* Some more WebUI templates, and further extensions
* Fixed a bug with checking new block height in block_check.go

0.4.2
* Allows loading and broadcasting of local txs via WebUI
* Allows to download the balance folder via WebUI
* More WebUI templates

0.4.1
* Do not route txs that have any output lower than a fee for 0.5KB
* Added support for a config file
* Fixed a bug introduced in 0.4.0 that was removing own txs from the pool
* Templates for WebUI

0.4.0
* Added tx routing (you can switch it off with "-txr=false")
* Further WebUI extensions
* A bunch of other code changes, that I don't remember now

0.3.5
* Addded WebUI - by default on http://127.0.0.1:8833/
* Improved framework for mining stats
* Changed the way "getblocks" is requested, plus some other hard to describe net related changes

0.3.4
* Arithmetic script opcodes check for the 4 bytes limit at input values

0.3.3
* Better external IP address discovery and droping connections to self

0.3.2